// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`[Label Component] renders Default without crashing 1`] = `
<body>
  <div>
    <label
      class="rcx-box rcx-box--full rcx-label rcx-d-flex rcx-font-p2m rcx-color-font-default"
    >
      Label
    </label>
  </div>
</body>
`;

exports[`[Label Component] renders Disabled without crashing 1`] = `
<body>
  <div>
    <label
      class="rcx-box rcx-box--full rcx-label--disabled rcx-label rcx-d-flex rcx-font-p2m rcx-color-font-default"
    >
      Label
    </label>
  </div>
</body>
`;

exports[`[Label Component] renders Info without crashing 1`] = `
<body>
  <div>
    <label
      class="rcx-box rcx-box--full rcx-label rcx-d-flex rcx-font-p2m rcx-color-font-default"
    >
      Label
      <span
        class="rcx-box rcx-box--full rcx-label__info rcx-css-wcp0mp"
      >
        <span
          hidden=""
        >
          this is a label info
        </span>
        <i
          aria-hidden="true"
          class="rcx-box rcx-box--full rcx-icon--name-info-circled rcx-icon"
          title="this is a label info"
        >
          
        </i>
      </span>
    </label>
  </div>
</body>
`;

exports[`[Label Component] renders InfoRequired without crashing 1`] = `
<body>
  <div>
    <label
      class="rcx-box rcx-box--full rcx-label rcx-d-flex rcx-font-p2m rcx-color-font-default"
    >
      Label
      <span
        class="rcx-box rcx-box--full rcx-label__info rcx-css-wcp0mp"
      >
        <span
          hidden=""
        >
          this is a label info
        </span>
        <i
          aria-hidden="true"
          class="rcx-box rcx-box--full rcx-icon--name-info-circled rcx-icon"
          title="this is a label info"
        >
          
        </i>
      </span>
      <span
        aria-hidden="true"
        class="rcx-box rcx-box--full rcx-label__required rcx-mis-4"
      >
        *
      </span>
    </label>
  </div>
</body>
`;

exports[`[Label Component] renders Required without crashing 1`] = `
<body>
  <div>
    <label
      class="rcx-box rcx-box--full rcx-label rcx-d-flex rcx-font-p2m rcx-color-font-default"
    >
      Label
      <span
        aria-hidden="true"
        class="rcx-box rcx-box--full rcx-label__required rcx-mis-4"
      >
        *
      </span>
    </label>
  </div>
</body>
`;
